--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇨🇳 台湾-7.79MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-564.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-5.36MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-765.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.62MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-745.6KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-291.9KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 乌克兰-373.8KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
   - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.66MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.58MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-765.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-291.9KB/s(Youtube:不良林)
+      - 乌克兰-373.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-765.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-291.9KB/s(Youtube:不良林)
+      - 乌克兰-373.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-765.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-291.9KB/s(Youtube:不良林)
+      - 乌克兰-373.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-765.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-291.9KB/s(Youtube:不良林)
+      - 乌克兰-373.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-765.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-291.9KB/s(Youtube:不良林)
+      - 乌克兰-373.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-765.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-291.9KB/s(Youtube:不良林)
+      - 乌克兰-373.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-564.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-765.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-291.9KB/s(Youtube:不良林)
+      - 乌克兰-373.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.58MB/s(Youtube:不良林)
