--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.95MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-376.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇳🇱 荷兰-627.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇨🇳 台湾-4.58MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.81MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.33MB/s(Youtube:不良林), server: 123.59.87.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-283.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-9.85MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-304.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-898.6KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.76MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.17MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-506.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-1.23MB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-997.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-376.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-627.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-898.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-376.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-627.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-898.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-376.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-627.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-898.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.58MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-376.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-627.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-898.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-376.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-627.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-898.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-376.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-627.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-898.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-376.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-627.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-898.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
