--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.33MB/s(Youtube:不良林), server: 123.59.87.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-283.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-9.85MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.55MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.65MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.79MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-304.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-8.76MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.17MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇫🇷 法国-506.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
       - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
       - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
       - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
       - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
       - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
       - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-283.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
       - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
